# clion_example

cmake_testapp/: CMakeLists.txt  calc.cpp  calc.h
cmake_testapp/includes/math/: header_math.h
cmake_testapp/test/: CMakeLists.txt  tests.cpp
cmake_testapp/test/ctest/: CMakeLists.txt  addvalues_negpos.cpp  addvalues_zero.cpp  assert_macro.h
